@@ -66,7 +66,7 @@
     		<attribute name="Bundle-Version" value="${version.num}"/>
     		<attribute name="Bundle-SymbolicName" value="${ant.project.name}"/>
     		<attribute name="Bundle-Description" value="Implementation for S32 with CSV as input data, by file and serial"/>
-    		<attribute name="Export-Service" value="gde.device.r2prototyping.S32"/>
+    		<attribute name="Export-Service" value="gde.device.r2prototyping.S32, gde.device.r2prototyping.S32_2"/>
     	</manifest>
 	    <jar manifest="src/META-INF/MANIFEST.MF" jarfile="build/${ant.project.name}.jar" compress="true" index="true" >
 	       	<fileset dir="${module.output}" includes="**/*.class"/>
