@@ -790,4 +790,12 @@ public class D100 extends MC3000 implements IDevice {
 			}
 		}
 	}
+	
+	/**
+	 * implementation returning device name which is the default directory name to store OSD files as well to search for
+	 * @return the preferred directory to search and store for device specific files
+	 */
+	public String getFileBaseDir() {
+		return this.getClass().getSimpleName();
+	}
 }
